--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <header>
     <h1>Drag and Drop Calculator <br></h1> 
-    <h3>please enter a number or operation and click "enter" <br>
-    (scroll bar appears if numbers exceed display width)
+    <h3>please enter numbers and operations separately and click "enter" to add to the expression.<br>
+    (scroll bar appears if display width exceeded)
     </h3>
   </header>
   
